# datn

./: .gitignore  CLAUDE.md  datn.tex  ~$ĐATN.docx  ĐATN.docx
.claude/: settings.local.json
Altium/: DATN.PrjPcb  PCB2.PcbDoc  Sheet2.SchDoc
BE/: CLAUDE.md
BE/robot_delivery/: .gitignore  pom.xml
MCU/: CLAUDE.md
MCU/Arduino/src/: src.ino
MCU/ESP32/src/: check_dir
Mobile/: CLAUDE.md
Mobile/robot_delivery/: .gitignore  firebase.json  pubspec.yaml
Mobile/robot_delivery/android/: gradle.properties
Mobile/robot_delivery/lib/: firebase_options.dart  main.dart
Mobile/robot_delivery/linux/: CMakeLists.txt
Mobile/robot_delivery/test/: widget_test.dart
Mobile/robot_delivery/web/: index.html  manifest.json
Mobile/robot_delivery/windows/: CMakeLists.txt
Pi/: README.md  main.py  requirements.txt
Pi/docs/: uart_protocol.md
Pi/src/pi_base/: bridge_app.py  config.py  mcu_protocol.py  models.py
STM32/: .cproject  .gitignore  .project
STM32/datn/: .mxproject  .project  README.md  datn.ioc
STM32/datn_config/: .cproject  .project  datn_config.ioc
Test_model/: dwa_planer.py  lds007_uart_reader.py  lidar_dwa_demo.py  out.csv  read_csv.py  test_model.py
backup/arduino/src/: Keypad_I2C.h  src.ino
documents/: datn.tex
new_robot_ws/: CLAUDE.md  README.md
new_robot_ws/src/: CMakeLists.txt
new_robot_ws/src/new_robot/: CMakeLists.txt  NODES.md  ROS_ARCHITECTURE_REPORT.md  package.xml  requirements.txt  setup.py
new_robot_ws/src/new_robot/cfg/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
new_robot_ws/src/new_robot/launch/: bringup.launch  full.launch  gps.launch  imu.launch  lidar_custom.launch  lidar_signal.launch  lidar_xv11.launch  main.launch  navigation_dwa.launch  serial_test.launch  server.launch
new_robot_ws/src/new_robot/src/new_robot/server/: config_ws.py
new_robot_ws/src/new_robot/src/new_robot/system/: HardwareInterface.py  ServerInterface.py  UpdateLocation.py  listen_orders.py  pubVelEncoderDiff.py
new_robot_ws/src/new_robot/src/new_robot/system/lidar/: lidar_lds007_node.py  lidar_processor.py
new_robot_ws/src/new_robot/src/server/: config_ws.py  ws_client.py
new_robot_ws/src/new_robot/src/system/: HardwareInterface.py  ServerInterface.py  UpdateLocation.py  cmd_vel_fake.py  gps_publisher.py  imu_publisher.py  listen_orders.py  pubVelEncoderDiff.py
new_robot_ws/src/new_robot/src/system/lidar/: lds007_uart_reader.py  lidar_lds007_node.py  lidar_processor.py
new_robot_ws/test_script/: README.md  test_bno055.py  test_sim7600.py
robot_ws/: .gitignore
(+237 files in other folders)
