<?xml version="1.0"?>
<package format="2">
  <name>new_robot</name>
  <version>0.0.1</version>
  <description>Clean bringup/test launch and utilities for the robot.</description>

  <maintainer email="you@example.com">DATN</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xv_11_laser_driver</exec_depend>

  <!-- External python dependency (documented; installed via pip on target) -->
  <exec_depend>python3</exec_depend>

</package>
